--- a/example/web-push-example.cabal
+++ b/example/web-push-example.cabal
@@ -18,7 +18,7 @@ executable web-push-example
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 
   build-depends:       base
-                     , web-push                       >= 0.3        && < 0.4
+                     , web-push                       > 0.3        && <= 0.4
                      , yesod                          >= 1.6        && < 1.7
                      , time
                      , http-conduit                   >= 2.3        && < 2.4
